...
        android:layout_centerVertical="true"
        freeotp:hollow="true"
        freeotp:max="1000"
        />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
